--- a/config/data_cfg/dataset/ok_vqa.yaml
+++ b/config/data_cfg/dataset/ok_vqa.yaml
@@ -2,7 +2,7 @@
 _target_: icv_src.icv_datasets.vqa_dataset.VQAV2Dataset
 
 name: "okvqa"
-root_idr: ${oc.env:OKVQA_PATH}
+root_dir: ${oc.env:OKVQA_PATH}
 train_coco_dataset_root: ${oc.env:COCO_PATH}/mscoco2014/train2014
 val_coco_dataset_root: ${oc.env:COCO_PATH}/mscoco2014/val2014
 few_shot_num: 32
