--- a/config/data_cfg/dataset/ok_vqa.yaml
+++ b/config/data_cfg/dataset/ok_vqa.yaml
@@ -1,6 +1,4 @@
 
-_target_: icv_src.icv_datasets.vqa_dataset.VQAV2Dataset
-
 name: "okvqa"
 root_dir: ${oc.env:OKVQA_PATH}
 train_coco_dataset_root: ${oc.env:COCO_PATH}/mscoco2014/train2014
@@ -9,7 +7,7 @@ few_shot_num: 32
 split: 'train'
 max_train_size: -1
 
-instrction: "Instruction: provide an answer to the question. Use the image to answer.\n"
+instruction: "Instruction: provide an answer to the question. Use the image to answer.\n"
 # use for eval
-# val_ques_path: ${oc.env:VQAV2_PATH}/v2_OpenEnded_mscoco_val2014_questions.json
-# val_ann_path: ${oc.env:VQAV2_PATH}/v2_mscoco_val2014_annotations.json
+val_ques_path: ${oc.env:OKVQA_PATH}/OpenEnded_mscoco_val2014_questions.json
+val_ann_path: ${oc.env:OKVQA_PATH}/mscoco_val2014_annotations.json
