--- a/config/inference.yaml
+++ b/config/inference.yaml
@@ -6,12 +6,15 @@ defaults:
 
 test_icv: True
 bs: 4
+test_num: -1
+
 run_name: debug
 result_dir: ${oc.env:RESULT_DIR}
 device: 'cuda'
 val_ques_path: ${oc.env:VQAV2_PATH}/v2_OpenEnded_mscoco_val2014_questions.json
 val_ann_path: ${oc.env:VQAV2_PATH}/v2_mscoco_val2014_annotations.json
 
+model_name_or_path: "${oc.env:MODEL_CPK_DIR}/idefics-9b"
 
 hydra:
   run:
