--- a/config/inference.yaml
+++ b/config/inference.yaml
@@ -5,8 +5,10 @@ defaults:
 
 
 test_icv: True
+test_icl: False
 bs: 4
 test_num: -1
+few_shot_list: [1, 2, 4, 8, 16, 32]
 
 run_name: debug
 result_dir: ${oc.env:RESULT_DIR}
