--- a/config/heuristic_icv.yaml
+++ b/config/heuristic_icv.yaml
@@ -3,19 +3,19 @@ defaults:
   - data_cfg: icv_data
 
 
-run_name: ???
+run_name: debug
 device: 'cuda'
 
 result_path: ${oc.env:RESULT_DIR}
 model_cpk_dir: ${MODEL_CPK_DIR}
 model_name: idefics-9b
-
-
-icv_length: 4
+alpha_value: 0.005
+seed: 3407
+icv_range: 4
 
 hydra:
   run:
-    dir: ${result_dir}/hydra_output/${hydra.job.name}/${run_name}/${now:%Y-%m-%d_%H-%M-%S}
+    dir: ${oc.env:RESULT_DIR}/hydra_output/${hydra.job.name}/${run_name}/${now:%Y-%m-%d_%H-%M-%S}
   sweep:
-    dir: ${result_dir}/hydra_output/${hydra.job.name}/${run_name}/${now:%Y-%m-%d_%H-%M-%S}
+    dir: ${oc.env:RESULT_DIR}/hydra_output/${hydra.job.name}/${run_name}/${now:%Y-%m-%d_%H-%M-%S}
     subdir: ${hydra.job.override_dirname}
