--- a/config/ques_type_inference.yaml
+++ b/config/ques_type_inference.yaml
@@ -7,6 +7,8 @@ defaults:
 
 bs: 4
 test_num: -1
+run_name: "global_icv_nonsig_alpha0.1_1wsample_32shot"
+test_all_mean: False
 
 result_dir: ${oc.env:RESULT_DIR}
 device: 'cuda'
