--- a/config/data_cfg/dataset/ok_vqa.yaml
+++ b/config/data_cfg/dataset/ok_vqa.yaml
@@ -6,7 +6,7 @@ val_coco_dataset_root: ${oc.env:COCO_PATH}/mscoco2014/val2014
 few_shot_num: 32
 split: 'train'
 max_train_size: -1
-filter_ques_type: None
+filter_ques_type: null
 
 instruction: "Instruction: provide an answer to the question. Use the image to answer.\n"
 # use for eval
