--- a/config/data_cfg/dataset/ok_vqa.yaml
+++ b/config/data_cfg/dataset/ok_vqa.yaml
@@ -7,6 +7,7 @@ few_shot_num: 32
 split: 'train'
 max_train_size: -1
 filter_ques_type: null
+select_from_query: True
 
 instruction: "Instruction: provide an answer to the question. Use the image to answer.\n"
 # use for eval
