--- a/config/data_cfg/dataset/vqav2.yaml
+++ b/config/data_cfg/dataset/vqav2.yaml
@@ -7,6 +7,7 @@ split: 'train'
 max_train_size: -1
 val_ann_file: "v2_mscoco_val2014_annotations_subdata.json"
 filter_ques_type: null
+select_from_query: True
 
 instruction: "Instruction: provide an answer to the question. Use the image to answer.\n"
 # use for eval
