add only hard loss

--- a/config/icv_module/icv_module.yaml
+++ b/config/icv_module/icv_module.yaml
@@ -2,6 +2,7 @@ defaults:
   - icv_encoder: global_icv_encoder
 
 hard_loss_weight: 0.
+only_hard_loss: False
 
 init_temperature: 1.
 decay_ratio: -1
