--- a/config/train.yaml
+++ b/config/train.yaml
@@ -8,7 +8,7 @@ seed: 426
 
 run_name: "debug"
 model_cpk_dir: ${oc.env:MODEL_CPK_DIR}
-model_name: "idefics-9b"
+model_name: "${icv_module.lmm.model_name}"
 # model_name: "HuggingFaceM4/tiny-random-idefics"
 
 result_dir: ${oc.env:RESULT_DIR}
