--- a/config/icv_module/icv_encoder/global_icv_encoder.yaml
+++ b/config/icv_module/icv_encoder/global_icv_encoder.yaml
@@ -3,3 +3,4 @@ _target_: icv_src.icv_encoder.global_icv_encoder.GlobalICVEncoder
 use_sigmoid: True
 alpha_learnable: True
 alpha_init_value: 0.
+embedding_name: base
