--- a/config/inference.yaml
+++ b/config/inference.yaml
@@ -15,7 +15,8 @@ result_dir: ${oc.env:RESULT_DIR}
 device: 'cuda'
 re_eval: False
 
-model_name_or_path: "${oc.env:MODEL_CPK_DIR}/idefics-9b"
+model_cpk_dir: ${oc.env:MODEL_CPK_DIR}
+model_name: "${icv_module.lmm.model_name}"
 
 generate_kwargs:
   max_new_tokens: 5
