--- a/config/train.yaml
+++ b/config/train.yaml
@@ -2,13 +2,16 @@ defaults:
   - _self_
   - data_cfg: icv_data
   - icv_module: icv_module
-  - trainer: zero2
+  - trainer: ddp
+  - lmm: idefics2-8B-base
+  - prompt: ${lmm}_${data_cfg/task}
 
 seed: 426
 
 run_name: "debug"
 model_cpk_dir: ${oc.env:MODEL_CPK_DIR}
-model_name: "${icv_module.lmm.model_name}"
+model_name: "${lmm.model_name}"
+device: "cpu"
 # model_name: "HuggingFaceM4/tiny-random-idefics"
 
 result_dir: ${oc.env:RESULT_DIR}
