--- a/config/icv_module/icv_encoder/clip_icv_encoder.yaml
+++ b/config/icv_module/icv_encoder/clip_icv_encoder.yaml
@@ -4,4 +4,5 @@ use_sigmoid: True
 alpha_learnable: True
 alpha_init_value: 0.
 embedding_name: clip
-clip_path: "/data1/pyz/model_weight/clip-vit-base-patch32/"
+clip_path: "/home/share/pyz/model_weight/clip-vit-base-patch32/"
+clip_ft: False
