--- a/config/train.yaml
+++ b/config/train.yaml
@@ -6,11 +6,12 @@ defaults:
 
 seed: 426
 
-run_name: "debug"
-model_cpk_dir: ${oc.env:MODEL_CPK_DIR}
-model_name: "idefics-9b"
-# model_name: "HuggingFaceM4/tiny-random-idefics"
+run_name: "clip_test"
 
+model_name_or_path: "${oc.env:MODEL_CPK_DIR}/idefics-9b"
+# model_name: "HuggingFaceM4/tiny-random-idefics"
+model_name: "idefics-9b"
+model_cpk_dir: ${oc.env:MODEL_CPK_DIR}
 result_dir: ${oc.env:RESULT_DIR}
 
 
