--- a/config/icv_module/icv_encoder/clip_icv_encoder.yaml
+++ b/config/icv_module/icv_encoder/clip_icv_encoder.yaml
@@ -4,5 +4,6 @@ use_sigmoid: True
 alpha_learnable: True
 alpha_init_value: 0.
 embedding_name: clip
-clip_path: "/home/share/pyz/model_weight/clip-vit-base-patch32/"
+clip_path: ""
 clip_ft: False
+feature_mode: 2
