Add use_rice flag and modify icl_inference function

--- a/config/inference.yaml
+++ b/config/inference.yaml
@@ -19,6 +19,8 @@ re_eval: False
 
 model_cpk_dir: ${oc.env:MODEL_CPK_DIR}
 model_name: "${icv_module.lmm.model_name}"
+use_rice: false
+
 
 generate_kwargs:
   max_new_tokens: 5
